# Shop-bot

./: .gitignore  CRITICAL_FIXES_CHECKLIST.md  Dockerfile  README.md  ROADMAP.md  SECURITY.md  SETUP.md  app.py  docker-compose.yml  env.example  loader.py  pyproject.toml  pytest.ini  requirements.txt
.cursor/rules/: quick-reference.mdc  shop-bot-complete.mdc
.github/workflows/: ci.yml
data/: config.py
filters/: __init__.py  is_admin.py  is_user.py
handlers/: __init__.py
handlers/admin/: __init__.py  add.py  orders.py  questions.py
handlers/user/: __init__.py  cart.py  catalog.py  delivery_status.py  menu.py  sos.py  wallet.py
keyboards/default/: markups.py
keyboards/inline/: categories.py  products_from_cart.py  products_from_catalog.py
middlewares/: __init__.py  antiflood.py
scripts/: security_check.py
states/: checkout_state.py  product_state.py  sos_state.py
tests/: __init__.py  test_database.py
utils/: image_storage.py  validators.py
utils/db/: storage.py
